compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bit_arrays__match_signed.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 313
expression: "\nfn go(x) {\n  let assert <<a:signed>> = x\n}\n"
---
----- SOURCE CODE

fn go(x) {
  let assert <<a:signed>> = x
}


----- COMPILED JAVASCRIPT
import { makeError } from "../rakun.mjs";

function go(x) {
  if (!(x.length == 1)) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x }
    )
  }
  let a = x.intFromSlice(0, 1, true, true);
  return x;
}
