compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bit_arrays__match_sized_big_endian_unsigned.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 346
expression: "\nfn go(x) {\n  let assert <<a:16-big-unsigned>> = x\n}\n"
---
import { makeError } from "../rakun.mjs";

function go(x) {
  if (!(x.length == 2)) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x }
    )
  }
  let a = x.intFromSlice(0, 2, true, false);
  return x;
}
