compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bit_arrays__match_sized_value.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 425
expression: "\nfn go(x) {\n  let assert <<258:16>> = x\n}\n"
---
----- SOURCE CODE

fn go(x) {
  let assert <<258:16>> = x
}


----- COMPILED JAVASCRIPT
import { makeError } from "../rakun.mjs";

function go(x) {
  if (x.intFromSlice(0, 2, true, false) !== 258 || !(x.length == 2)) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x }
    )
  }
  return x;
}
